NetBSD Problem Report #49323
From ryo_on@yk.rim.or.jp Sun Oct 26 21:39:44 2014
Return-Path: <ryo_on@yk.rim.or.jp>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
by mollari.NetBSD.org (Postfix) with ESMTPS id 7C775A65ED
for <gnats-bugs@gnats.NetBSD.org>; Sun, 26 Oct 2014 21:39:44 +0000 (UTC)
Message-Id: <20141026213940.9DA6BA0B4@mail.SiriusCloud.jp>
Date: Mon, 27 Oct 2014 06:39:40 +0900 (JST)
From: ryoon@NetBSD.org
Reply-To: ryoon@NetBSD.org
To: gnats-bugs@gnats.NetBSD.org
Subject: tlp(4) on Microsoft Windows Server 2008 R2's Hyper-V VM stops
X-Send-Pr-Version: 3.95
>Number: 49323
>Category: kern
>Synopsis: tlp(4) on Microsoft Windows Server 2008 R2's Hyper-V VM stops
>Confidential: no
>Severity: serious
>Priority: medium
>Responsible: kern-bug-people
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sun Oct 26 21:40:00 +0000 2014
>Closed-Date: Wed Jan 03 20:33:58 +0000 2018
>Last-Modified: Wed Jan 03 20:33:58 +0000 2018
>Originator: Ryo ONODERA
>Release: NetBSD 7.99.1
>Organization:
>Environment:
System: NetBSD/amd64 7.0_BETA GENERIC.201410071930Z from nyftp
Architecture: x86_64
Machine: amd64
>Description:
tlp(4) generates the following error
on Hyper-V with legacy network adapter of Microsoft Windows Server 2008 R2.
tlp0: receiving ring overrun
I have 5 this message and 3 days uptime, and NetBSD this VM stops receiving
any TCP/IP packets.
tlp(4) part of dmesg is here.
tlp0 at pci0 dev 10 function 0: DECchip 21140A Ethernet, pass 2.0
tlp0: interrupting at irq 11
tlp0: Ethernet address XX:XX:XX:XX:XX:XX
tlp0: 100baseTX, 100baseTX-FDX
>How-To-Repeat:
Run NetBSD/amd64 7.0_BETA with legacy network adapter
on Hyper-V of Windows Server 2008 R2, and wait 3 days.
>Fix:
I have no idea.
>Release-Note:
>Audit-Trail:
From: Joerg Sonnenberger <joerg@britannica.bec.de>
To: gnats-bugs@NetBSD.org
Cc:
Subject: Re: kern/49323: tlp(4) on Microsoft Windows Server 2008 R2's Hyper-V
VM stops
Date: Sun, 26 Oct 2014 22:55:48 +0100
On Sun, Oct 26, 2014 at 09:40:00PM +0000, ryoon@NetBSD.org wrote:
> >Description:
> tlp(4) generates the following error
> on Hyper-V with legacy network adapter of Microsoft Windows Server 2008 R2.
>
> tlp0: receiving ring overrun
I found the only reliable way for networking is to disable the IOAPIC.
Can you try that with boot -c?
Joerg
From: Ryo ONODERA <ryo_on@yk.rim.or.jp>
To: gnats-bugs@NetBSD.org, joerg@britannica.bec.de
Cc:
Subject: Re: kern/49323: tlp(4) on Microsoft Windows Server 2008 R2's
Hyper-V VM stops
Date: Mon, 27 Oct 2014 08:45:25 +0900 (JST)
Hi,
From: Joerg Sonnenberger <joerg@britannica.bec.de>, Date: Sun, 26 Oct 2014 22:00:01 +0000 (UTC)
> The following reply was made to PR kern/49323; it has been noted by GNATS.
>
> From: Joerg Sonnenberger <joerg@britannica.bec.de>
> To: gnats-bugs@NetBSD.org
> Cc:
> Subject: Re: kern/49323: tlp(4) on Microsoft Windows Server 2008 R2's Hyper-V
> VM stops
> Date: Sun, 26 Oct 2014 22:55:48 +0100
>
> On Sun, Oct 26, 2014 at 09:40:00PM +0000, ryoon@NetBSD.org wrote:
> > >Description:
> > tlp(4) generates the following error
> > on Hyper-V with legacy network adapter of Microsoft Windows Server 2008 R2.
> >
> > tlp0: receiving ring overrun
>
> I found the only reliable way for networking is to disable the IOAPIC.
> Can you try that with boot -c?
I have forgotten to mention that ACPI is disabled for enabling tlp(4).
Anyway I will try to disable IOAPIC with boot -c.
Thank you.
--
Ryo ONODERA // ryo_on@yk.rim.or.jp
PGP fingerprint = 82A2 DC91 76E0 A10A 8ABB FD1B F404 27FA C7D1 15F3
From: Ryo ONODERA <ryo_on@yk.rim.or.jp>
To: gnats-bugs@NetBSD.org
Cc:
Subject: Re: kern/49323: tlp(4) on Microsoft Windows Server 2008 R2's
Hyper-V VM stops
Date: Mon, 27 Oct 2014 08:56:50 +0900 (JST)
From: Ryo ONODERA <ryo_on@yk.rim.or.jp>, Date: Sun, 26 Oct 2014 23:50:01 +0000 (UTC)
> The following reply was made to PR kern/49323; it has been noted by GNATS.
>
> From: Ryo ONODERA <ryo_on@yk.rim.or.jp>
> To: gnats-bugs@NetBSD.org, joerg@britannica.bec.de
> Cc:
> Subject: Re: kern/49323: tlp(4) on Microsoft Windows Server 2008 R2's
> Hyper-V VM stops
> Date: Mon, 27 Oct 2014 08:45:25 +0900 (JST)
>
> Hi,
>
> From: Joerg Sonnenberger <joerg@britannica.bec.de>, Date: Sun, 26 Oct 2014 22:00:01 +0000 (UTC)
>
> > The following reply was made to PR kern/49323; it has been noted by GNATS.
> >
> > From: Joerg Sonnenberger <joerg@britannica.bec.de>
> > To: gnats-bugs@NetBSD.org
> > Cc:
> > Subject: Re: kern/49323: tlp(4) on Microsoft Windows Server 2008 R2's Hyper-V
> > VM stops
> > Date: Sun, 26 Oct 2014 22:55:48 +0100
> >
> > On Sun, Oct 26, 2014 at 09:40:00PM +0000, ryoon@NetBSD.org wrote:
> > > >Description:
> > > tlp(4) generates the following error
> > > on Hyper-V with legacy network adapter of Microsoft Windows Server 2008 R2.
> > >
> > > tlp0: receiving ring overrun
> >
> > I found the only reliable way for networking is to disable the IOAPIC.
> > Can you try that with boot -c?
>
> I have forgotten to mention that ACPI is disabled for enabling tlp(4).
> Anyway I will try to disable IOAPIC with boot -c.
When ACPI is enabled, I have gotten infinite following messages.
And I cannot use any network functionality of tlp(4).
tlp0: filter setup and transmit timeout
--
Ryo ONODERA // ryo_on@yk.rim.or.jp
PGP fingerprint = 82A2 DC91 76E0 A10A 8ABB FD1B F404 27FA C7D1 15F3
From: Ryo ONODERA <ryo_on@yk.rim.or.jp>
To: gnats-bugs@NetBSD.org
Cc:
Subject: Re: kern/49323: tlp(4) on Microsoft Windows Server 2008 R2's
Hyper-V VM stops
Date: Mon, 27 Oct 2014 09:05:12 +0900 (JST)
From: Ryo ONODERA <ryo_on@yk.rim.or.jp>, Date: Sun, 26 Oct 2014 23:50:01 +0000 (UTC)
> The following reply was made to PR kern/49323; it has been noted by GNATS.
>
> From: Ryo ONODERA <ryo_on@yk.rim.or.jp>
> To: gnats-bugs@NetBSD.org, joerg@britannica.bec.de
> Cc:
> Subject: Re: kern/49323: tlp(4) on Microsoft Windows Server 2008 R2's
> Hyper-V VM stops
> Date: Mon, 27 Oct 2014 08:45:25 +0900 (JST)
>
> Hi,
>
> From: Joerg Sonnenberger <joerg@britannica.bec.de>, Date: Sun, 26 Oct 2014 22:00:01 +0000 (UTC)
>
> > The following reply was made to PR kern/49323; it has been noted by GNATS.
> >
> > From: Joerg Sonnenberger <joerg@britannica.bec.de>
> > To: gnats-bugs@NetBSD.org
> > Cc:
> > Subject: Re: kern/49323: tlp(4) on Microsoft Windows Server 2008 R2's Hyper-V
> > VM stops
> > Date: Sun, 26 Oct 2014 22:55:48 +0100
> >
> > On Sun, Oct 26, 2014 at 09:40:00PM +0000, ryoon@NetBSD.org wrote:
> > > >Description:
> > > tlp(4) generates the following error
> > > on Hyper-V with legacy network adapter of Microsoft Windows Server 2008 R2.
> > >
> > > tlp0: receiving ring overrun
> >
> > I found the only reliable way for networking is to disable the IOAPIC.
> > Can you try that with boot -c?
>
> I have forgotten to mention that ACPI is disabled for enabling tlp(4).
> Anyway I will try to disable IOAPIC with boot -C.
It seems that disabling IOAPIC is as same as disabling ACPI.
It will not improve my problem.
--
Ryo ONODERA // ryo_on@yk.rim.or.jp
PGP fingerprint = 82A2 DC91 76E0 A10A 8ABB FD1B F404 27FA C7D1 15F3
From: Moroo Akira <retrage01@gmail.com>
To: gnats-bugs@NetBSD.org
Cc:
Subject: Re: kern/49323
Date: Wed, 29 Jun 2016 23:33:34 +0900
OpenBSD's de(4) had same problem.
This has been fixed with following commit.
http://marc.info/?l=openbsd-cvs&m=146718035432599&w=2
I created a patch for fixing this bug in the same way.
https://gist.github.com/retrage/5dd99764268e39537d127e7a5abb26be
(I also created a patch for i386, but it is not tested.)
Index: x86/x86/ioapic.c
===================================================================
RCS file: /cvsroot/src/sys/arch/x86/x86/ioapic.c,v
retrieving revision 1.52
diff -c -r1.52 ioapic.c
*** x86/x86/ioapic.c 27 Jul 2015 15:45:20 -0000 1.52
--- x86/x86/ioapic.c 29 Jun 2016 12:11:25 -0000
***************
*** 508,513 ****
--- 508,514 ----
flags = ioapic_lock(sc);
redlo = ioapic_read_ul(sc, IOAPIC_REDLO(pin));
redlo |= IOAPIC_REDLO_MASK;
+ redlo &= ~IOAPIC_REDLO_RIRR;
ioapic_write_ul(sc, IOAPIC_REDLO(pin), redlo);
ioapic_unlock(sc, flags);
}
***************
*** 549,554 ****
--- 550,556 ----
flags = ioapic_lock(sc);
redlo = ioapic_read_ul(sc, IOAPIC_REDLO(pin));
redlo &= ~IOAPIC_REDLO_MASK;
+ redlo &= ~IOAPIC_REDLO_RIRR;
ioapic_write_ul(sc, IOAPIC_REDLO(pin), redlo);
ioapic_unlock(sc, flags);
}
Index: amd64/include/i82093reg.h
===================================================================
RCS file: /cvsroot/src/sys/arch/amd64/include/i82093reg.h,v
retrieving revision 1.5
diff -c -r1.5 i82093reg.h
*** amd64/include/i82093reg.h 3 Jul 2008 14:02:25 -0000 1.5
--- amd64/include/i82093reg.h 29 Jun 2016 12:13:55 -0000
***************
*** 50,55 ****
--- 50,56 ----
movq IOAPIC_SC_DATA(%rdi),%r15 ;\
movl (%r15),%esi ;\
orl $IOAPIC_REDLO_MASK,%esi ;\
+ andl $~IOAPIC_REDLO_RIRR,%esi ;\
movl %esi,(%r15) ;\
movq IS_PIC(%r14),%rdi ;\
ioapic_asm_unlock(num)
***************
*** 67,72 ****
--- 68,74 ----
movl %esi, (%r15) ;\
movl (%r13),%r12d ;\
andl $~IOAPIC_REDLO_MASK,%r12d ;\
+ andl $~IOAPIC_REDLO_RIRR,%r12d ;\
movl %esi,(%r15) ;\
movl %r12d,(%r13) ;\
movq IS_PIC(%r14),%rdi ;\
From: Joerg Sonnenberger <joerg@bec.de>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org,
netbsd-bugs@netbsd.org, ryoon@NetBSD.org
Subject: Re: kern/49323
Date: Wed, 29 Jun 2016 17:10:23 +0200
On Wed, Jun 29, 2016 at 02:35:01PM +0000, Moroo Akira wrote:
> Index: x86/x86/ioapic.c
> ===================================================================
> RCS file: /cvsroot/src/sys/arch/x86/x86/ioapic.c,v
> retrieving revision 1.52
> diff -c -r1.52 ioapic.c
> *** x86/x86/ioapic.c 27 Jul 2015 15:45:20 -0000 1.52
> --- x86/x86/ioapic.c 29 Jun 2016 12:11:25 -0000
> ***************
> *** 549,554 ****
> --- 550,556 ----
> flags = ioapic_lock(sc);
> redlo = ioapic_read_ul(sc, IOAPIC_REDLO(pin));
> redlo &= ~IOAPIC_REDLO_MASK;
> + redlo &= ~IOAPIC_REDLO_RIRR;
> ioapic_write_ul(sc, IOAPIC_REDLO(pin), redlo);
> ioapic_unlock(sc, flags);
> }
Combine the masks?
> Index: amd64/include/i82093reg.h
> ===================================================================
> RCS file: /cvsroot/src/sys/arch/amd64/include/i82093reg.h,v
> retrieving revision 1.5
> diff -c -r1.5 i82093reg.h
> *** amd64/include/i82093reg.h 3 Jul 2008 14:02:25 -0000 1.5
> --- amd64/include/i82093reg.h 29 Jun 2016 12:13:55 -0000
> ***************
> *** 67,72 ****
> --- 68,74 ----
> movl %esi, (%r15) ;\
> movl (%r13),%r12d ;\
> andl $~IOAPIC_REDLO_MASK,%r12d ;\
> + andl $~IOAPIC_REDLO_RIRR,%r12d ;\
> movl %esi,(%r15) ;\
> movl %r12d,(%r13) ;\
> movq IS_PIC(%r14),%rdi ;\
Here too?
Joerg
From: Moroo Akira <retrage01@gmail.com>
To: gnats-bugs@NetBSD.org
Cc:
Subject: Re: kern/49323
Date: Sat, 2 Jul 2016 23:31:06 +0900
The patch modifies a mask to Remote IRR flag in IOAPIC.
This flag should be 0. It must be read only, so it does not matter how
it is 0 or 1. but in Hyper-V guest, "emulated IOAPIC interprets a write
of 1 in some unexpected way", according to the commit message of OpenBSD.
This causes the de(4) timeout.
The former is fix for sethwmask/sethwunmask,
the latter is for ioapic_mask/ioapic_unmask which are used for INTRSUTUB
in vector.S.
A kernel with this patch has been run almost a day without any timeout.
On 2016/06/30 0:15, Joerg Sonnenberger wrote:
> The following reply was made to PR kern/49323; it has been noted by GNATS.
>
> From: Joerg Sonnenberger <joerg@bec.de>
> To: gnats-bugs@NetBSD.org
> Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org,
> netbsd-bugs@netbsd.org, ryoon@NetBSD.org
> Subject: Re: kern/49323
> Date: Wed, 29 Jun 2016 17:10:23 +0200
>
> On Wed, Jun 29, 2016 at 02:35:01PM +0000, Moroo Akira wrote:
> > Index: x86/x86/ioapic.c
> > ===================================================================
> > RCS file: /cvsroot/src/sys/arch/x86/x86/ioapic.c,v
> > retrieving revision 1.52
> > diff -c -r1.52 ioapic.c
> > *** x86/x86/ioapic.c 27 Jul 2015 15:45:20 -0000 1.52
> > --- x86/x86/ioapic.c 29 Jun 2016 12:11:25 -0000
> > ***************
> > *** 549,554 ****
> > --- 550,556 ----
> > flags = ioapic_lock(sc);
> > redlo = ioapic_read_ul(sc, IOAPIC_REDLO(pin));
> > redlo &= ~IOAPIC_REDLO_MASK;
> > + redlo &= ~IOAPIC_REDLO_RIRR;
> > ioapic_write_ul(sc, IOAPIC_REDLO(pin), redlo);
> > ioapic_unlock(sc, flags);
> > }
>
> Combine the masks?
>
> > Index: amd64/include/i82093reg.h
> > ===================================================================
> > RCS file: /cvsroot/src/sys/arch/amd64/include/i82093reg.h,v
> > retrieving revision 1.5
> > diff -c -r1.5 i82093reg.h
> > *** amd64/include/i82093reg.h 3 Jul 2008 14:02:25 -0000 1.5
> > --- amd64/include/i82093reg.h 29 Jun 2016 12:13:55 -0000
> > ***************
> > *** 67,72 ****
> > --- 68,74 ----
> > movl %esi, (%r15) ;\
> > movl (%r13),%r12d ;\
> > andl $~IOAPIC_REDLO_MASK,%r12d ;\
> > + andl $~IOAPIC_REDLO_RIRR,%r12d ;\
> > movl %esi,(%r15) ;\
> > movl %r12d,(%r13) ;\
> > movq IS_PIC(%r14),%rdi ;\
>
> Here too?
>
> Joerg
>
>
--
Moroo Akira
retrage01@gmail.com
From: Joerg Sonnenberger <joerg@bec.de>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org,
netbsd-bugs@netbsd.org, ryoon@NetBSD.org
Subject: Re: kern/49323
Date: Sun, 3 Jul 2016 12:55:48 +0200
On Sat, Jul 02, 2016 at 02:35:01PM +0000, Moroo Akira wrote:
> The patch modifies a mask to Remote IRR flag in IOAPIC.
> This flag should be 0. It must be read only, so it does not matter how
> it is 0 or 1. but in Hyper-V guest, "emulated IOAPIC interprets a write
> of 1 in some unexpected way", according to the commit message of OpenBSD.
> This causes the de(4) timeout.
That part is clearly.
> The former is fix for sethwmask/sethwunmask,
> the latter is for ioapic_mask/ioapic_unmask which are used for INTRSUTUB
> in vector.S.
This part is clear as well. I'm just asking about replacing the two
consecutive ands with a single of a combined ask. Since the operands are
both constants, that avoids one instruction each and is also easier to
read for humans. Sorry if that wasn't clear.
Joerg
From: "Takeshi Nakayama" <nakayama@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/49323 CVS commit: src/sys/arch
Date: Mon, 13 Nov 2017 11:45:54 +0000
Module Name: src
Committed By: nakayama
Date: Mon Nov 13 11:45:54 UTC 2017
Modified Files:
src/sys/arch/amd64/include: i82093reg.h
src/sys/arch/i386/include: i82093reg.h
src/sys/arch/x86/x86: ioapic.c
Log Message:
Don't write a 1 to the read only RIRR bit in the IOAPIC redirection
register to fix "tlp0: filter setup and transmit timeout" observed
on Hyper-V VMs with the Legacy Network Adapter.
From OpenBSD via PR kern/49323:
https://marc.info/?l=openbsd-cvs&m=146718035432599&w=2
| Modified files:
| sys/arch/amd64/amd64: ioapic.c
| sys/arch/amd64/include: i82093reg.h
|
| Log message:
| Don't write a 1 to the RIRR bit in the IOAPIC redirection register. This bit
| is R/O, and although it should not matter what value is written there,
| Hyper-V's emulated IOAPIC interprets a write of 1 in some unexpected way and
| subsequently blocks interrupt delivery. This primarily manifests itself as
| de(4) timeouts when using Hyper-V VMs with the "Legacy Network Adapter"
| interface.
Tested both amd64 and i386 on Client Hyper-V on Windows 10.
To generate a diff of this commit:
cvs rdiff -u -r1.8 -r1.9 src/sys/arch/amd64/include/i82093reg.h
cvs rdiff -u -r1.10 -r1.11 src/sys/arch/i386/include/i82093reg.h
cvs rdiff -u -r1.53 -r1.54 src/sys/arch/x86/x86/ioapic.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->feedback
State-Changed-By: nakayama@NetBSD.org
State-Changed-When: Mon, 13 Nov 2017 12:12:19 +0000
State-Changed-Why:
Fix committed to the HEAD, pullup-8 #359 and pullup-7 #1527.
Can you confirm?
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/49323 CVS commit: [netbsd-8] src/sys/arch
Date: Tue, 21 Nov 2017 11:01:02 +0000
Module Name: src
Committed By: martin
Date: Tue Nov 21 11:01:02 UTC 2017
Modified Files:
src/sys/arch/amd64/include [netbsd-8]: i82093reg.h
src/sys/arch/i386/include [netbsd-8]: i82093reg.h
src/sys/arch/x86/x86 [netbsd-8]: ioapic.c
Log Message:
Pull up following revision(s) (requested by nakayama in ticket #359):
sys/arch/amd64/include/i82093reg.h: revision 1.9
sys/arch/x86/x86/ioapic.c: revision 1.54
sys/arch/i386/include/i82093reg.h: revision 1.11
Don't write a 1 to the read only RIRR bit in the IOAPIC redirection
register to fix "tlp0: filter setup and transmit timeout" observed
on Hyper-V VMs with the Legacy Network Adapter.
From OpenBSD via PR kern/49323:
https://marc.info/?l=openbsd-cvs&m=146718035432599&w=2
Modified files:
sys/arch/amd64/amd64: ioapic.c
sys/arch/amd64/include: i82093reg.h
Log message:
Don't write a 1 to the RIRR bit in the IOAPIC redirection register. This bit
is R/O, and although it should not matter what value is written there,
Hyper-V's emulated IOAPIC interprets a write of 1 in some unexpected way and
subsequently blocks interrupt delivery. This primarily manifests itself as
de(4) timeouts when using Hyper-V VMs with the "Legacy Network Adapter"
interface.
Tested both amd64 and i386 on Client Hyper-V on Windows 10.
To generate a diff of this commit:
cvs rdiff -u -r1.8 -r1.8.2.1 src/sys/arch/amd64/include/i82093reg.h
cvs rdiff -u -r1.10 -r1.10.2.1 src/sys/arch/i386/include/i82093reg.h
cvs rdiff -u -r1.52 -r1.52.10.1 src/sys/arch/x86/x86/ioapic.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: Ryo ONODERA <ryo@tetera.org>
To: gnats-bugs@NetBSD.org, nakayama@NetBSD.org
Cc:
Subject: Re: kern/49323 (tlp(4) on Microsoft Windows Server 2008 R2's
Hyper-V VM stops)
Date: Mon, 18 Dec 2017 17:50:56 +0900 (JST)
Hi,
From: nakayama@NetBSD.org, Date: Mon, 13 Nov 2017 12:12:20 +0000 (UTC)
> Synopsis: tlp(4) on Microsoft Windows Server 2008 R2's Hyper-V VM stops
>
> State-Changed-From-To: open->feedback
> State-Changed-By: nakayama@NetBSD.org
> State-Changed-When: Mon, 13 Nov 2017 12:12:19 +0000
> State-Changed-Why:
> Fix committed to the HEAD, pullup-8 #359 and pullup-7 #1527.
> Can you confirm?
Works fine for my Windows 10 Hyper-V V1 VM.
I have tested NetBSD/amd64 8.99.9.
Thank you very much.
--
Ryo ONODERA // ryo@tetera.org
PGP fingerprint = 82A2 DC91 76E0 A10A 8ABB FD1B F404 27FA C7D1 15F3
State-Changed-From-To: feedback->pending-pullups
State-Changed-By: nakayama@NetBSD.org
State-Changed-When: Mon, 18 Dec 2017 10:01:54 +0000
State-Changed-Why:
Submitter confirmed the fix and waiting for pullup-7 #1527.
From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/49323 CVS commit: [netbsd-7-0] src/sys/arch
Date: Wed, 3 Jan 2018 19:58:10 +0000
Module Name: src
Committed By: snj
Date: Wed Jan 3 19:58:10 UTC 2018
Modified Files:
src/sys/arch/amd64/include [netbsd-7-0]: i82093reg.h
src/sys/arch/i386/include [netbsd-7-0]: i82093reg.h
src/sys/arch/x86/x86 [netbsd-7-0]: ioapic.c
Log Message:
Pull up following revision(s) (requested by nakayama in ticket #1527):
sys/arch/amd64/include/i82093reg.h: revision 1.9
sys/arch/i386/include/i82093reg.h: revision 1.11
sys/arch/x86/x86/ioapic.c: revision 1.54
Don't write a 1 to the read only RIRR bit in the IOAPIC redirection
register to fix "tlp0: filter setup and transmit timeout" observed
on Hyper-V VMs with the Legacy Network Adapter.
From OpenBSD via PR kern/49323:
https://marc.info/?l=openbsd-cvs&m=146718035432599&w=2
To generate a diff of this commit:
cvs rdiff -u -r1.5 -r1.5.62.1 src/sys/arch/amd64/include/i82093reg.h
cvs rdiff -u -r1.8 -r1.8.62.1 src/sys/arch/i386/include/i82093reg.h
cvs rdiff -u -r1.48 -r1.48.12.1 src/sys/arch/x86/x86/ioapic.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/49323 CVS commit: [netbsd-7-1] src/sys/arch
Date: Wed, 3 Jan 2018 19:58:12 +0000
Module Name: src
Committed By: snj
Date: Wed Jan 3 19:58:12 UTC 2018
Modified Files:
src/sys/arch/amd64/include [netbsd-7-1]: i82093reg.h
src/sys/arch/i386/include [netbsd-7-1]: i82093reg.h
src/sys/arch/x86/x86 [netbsd-7-1]: ioapic.c
Log Message:
Pull up following revision(s) (requested by nakayama in ticket #1527):
sys/arch/amd64/include/i82093reg.h: revision 1.9
sys/arch/i386/include/i82093reg.h: revision 1.11
sys/arch/x86/x86/ioapic.c: revision 1.54
Don't write a 1 to the read only RIRR bit in the IOAPIC redirection
register to fix "tlp0: filter setup and transmit timeout" observed
on Hyper-V VMs with the Legacy Network Adapter.
From OpenBSD via PR kern/49323:
https://marc.info/?l=openbsd-cvs&m=146718035432599&w=2
To generate a diff of this commit:
cvs rdiff -u -r1.5 -r1.5.68.1 src/sys/arch/amd64/include/i82093reg.h
cvs rdiff -u -r1.8 -r1.8.68.1 src/sys/arch/i386/include/i82093reg.h
cvs rdiff -u -r1.48 -r1.48.16.1 src/sys/arch/x86/x86/ioapic.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/49323 CVS commit: [netbsd-7] src/sys/arch
Date: Wed, 3 Jan 2018 19:58:14 +0000
Module Name: src
Committed By: snj
Date: Wed Jan 3 19:58:14 UTC 2018
Modified Files:
src/sys/arch/amd64/include [netbsd-7]: i82093reg.h
src/sys/arch/i386/include [netbsd-7]: i82093reg.h
src/sys/arch/x86/x86 [netbsd-7]: ioapic.c
Log Message:
Pull up following revision(s) (requested by nakayama in ticket #1527):
sys/arch/amd64/include/i82093reg.h: revision 1.9
sys/arch/i386/include/i82093reg.h: revision 1.11
sys/arch/x86/x86/ioapic.c: revision 1.54
Don't write a 1 to the read only RIRR bit in the IOAPIC redirection
register to fix "tlp0: filter setup and transmit timeout" observed
on Hyper-V VMs with the Legacy Network Adapter.
From OpenBSD via PR kern/49323:
https://marc.info/?l=openbsd-cvs&m=146718035432599&w=2
To generate a diff of this commit:
cvs rdiff -u -r1.5 -r1.5.58.1 src/sys/arch/amd64/include/i82093reg.h
cvs rdiff -u -r1.8 -r1.8.58.1 src/sys/arch/i386/include/i82093reg.h
cvs rdiff -u -r1.48 -r1.48.8.1 src/sys/arch/x86/x86/ioapic.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: pending-pullups->closed
State-Changed-By: nakayama@NetBSD.org
State-Changed-When: Wed, 03 Jan 2018 20:33:58 +0000
State-Changed-Why:
Pulled up.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.